# codegenta

./: .project  .travis.yml  Cargo.toml  Notes.md  README.md  search-index.js  update-docs.sh
codegenta/: index.html  sidebar-items.js
codegenta/generator/: fn.generate_all.html  fn.generate_tables.html  fn.get_all_tables.html  fn.get_schemas.html  fn.get_tables_in_schema.html  index.html  sidebar-items.js  struct.Config.html
codegenta/meta/: sidebar-items.js
examples/: complex_query.rs  enumerated_complex_query.rs  generate_model_code.rs  generate_model_code_for_test.rs  renamed_columns.rs  sqlite_all_table_model.rs  test_em_insert_exchangable.rs  test_em_insert_photo.rs  test_em_insert_product.rs  test_em_product.rs  test_statics.rs
src/: generator.rs  lib.rs  meta.rs  table_json.rs  writer.rs
src/codegenta/: generator.rs.html  lib.rs.html  meta.rs.html
tests/: lib.rs  test_em.rs  test_lib.rs  test_pool.rs  tests.rs
unused/: enumerated_complex_query.rs  generate_json_schema.rs  product.rs  renamed_columns.rs  test_lib.rs  test_table_json.rs
