[package]
name = "codegenta"
version = "0.0.4"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "A model code generator from database table using rustorm ORM"
readme = "README.md"
repository = "https://github.com/ivanceras/codegenta"
documentation = "https://ivanceras.github.io/codegenta/codegenta/"
keywords = ["orm", "codegen", "generator", "database"]

[lib]
name = "codegenta"




[dependencies.chrono]
version = "0.2.16"
features = ["rustc-serialize"]

[dependencies]
rustc-serialize = "0.3.16"
uuid = "0.1.18"
time = "0.1.33"
#rustorm = "0.2.1"


[dependencies.rustorm]
path = "../rustorm"

